@@ -1,4 +1,5 @@
 3.1.7
+	Do not retain urlcheck properties if the urlcheck clause did not match
 	Allow loading regex in lists of body clauses
 	Option to clear urlcheck prop before handling a new recipient
 	%D format string for getting the list of matching DNSRBL
